--- a/css/index.css
+++ b/css/index.css
@@ -8,3 +8,6 @@ a {
     text-decoration: none;
     border-bottom: 1px solid #222222;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
+
