--- a/css/index.css
+++ b/css/index.css
@@ -12,5 +12,5 @@ a {
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap');
 
 body {
-    font-family: font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto Mono', monospace;
 }
